# pr-as-planning-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  event_demo.xml  main.cxx  sim-home  sim-home.pro
lapkt-lib/: .sconsign.dblite  SConstruct
model/: CloseDoor.hxx  Drop.hxx  OpenDoor.hxx  PickUp.hxx  SimHome.cxx  SimHome.hxx  StagePropAction.hxx  WalkTo.hxx
thor/: Goals.txt  keybord.py
widgets/: AppWindow.cxx  AppWindow.hxx  ObservationsView.hxx
